--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^6.7.1",
     "@react-native-firebase/auth": "^6.7.1",
     "@react-native-firebase/firestore": "^6.7.1",
+    "@react-native-firebase/functions": "^7.1.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/compat": "^5.1.9",
     "@react-navigation/drawer": "^5.5.0",
@@ -32,7 +33,6 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-native": "0.62.2",
-    "react-native-activity-feed": "^0.9.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
