--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -34,5 +34,18 @@
 	<string>https://nerdhub-9fed8.firebaseio.com</string>
 	<key>ADMOB_APP_ID</key>
 	<string>ca-app-pub-6545837409365542~6951540400</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+  	<dict>
+    <key>CFBundleTypeRole</key>
+    <string>Editor</string>
+    <key>CFBundleURLName</key>
+    <string>my-scheme</string>
+    <key>CFBundleURLSchemes</key>
+    <array>
+    <string>my-scheme</string>
+    </array>
+  	</dict>
+	</array>
 </dict>
 </plist>
