--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.9",
-    "@react-native-firebase/app": "^6.7.1",
-    "@react-native-firebase/auth": "^6.7.1",
-    "@react-native-firebase/firestore": "^6.7.1",
+    "@react-native-firebase/app": "^7.1.0",
+    "@react-native-firebase/auth": "^7.1.0",
+    "@react-native-firebase/database": "^7.1.0",
+    "@react-native-firebase/firestore": "^7.1.0",
     "@react-native-firebase/functions": "^7.1.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/compat": "^5.1.9",
@@ -35,6 +36,7 @@
     "react-native": "0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
