--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/netinfo": "^5.9.2",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/compat": "^5.1.9",
     "@react-navigation/drawer": "^5.5.0",
@@ -21,6 +22,9 @@
     "@react-navigation/stack": "^5.2.11",
     "@unimodules/core": "^5.1.0",
     "@unimodules/react-native-adapter": "^5.2.0",
+    "amazon-cognito-identity-js": "^4.3.1",
+    "aws-amplify": "^3.0.16",
+    "aws-amplify-react-native": "^4.2.0",
     "expo-asset": "^8.1.4",
     "expo-constants": "^9.0.0",
     "expo-file-system": "^8.1.0",
