--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@aws-amplify/pubsub": "^2.1.9",
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.9",
@@ -23,13 +25,15 @@
     "@unimodules/core": "^5.1.0",
     "@unimodules/react-native-adapter": "^5.2.0",
     "amazon-cognito-identity-js": "^4.3.1",
-    "aws-amplify": "^3.0.16",
+    "apollo-boost": "^0.4.9",
+    "aws-amplify": "^2.3.0",
     "aws-amplify-react-native": "^4.2.0",
     "expo-asset": "^8.1.4",
     "expo-constants": "^9.0.0",
     "expo-file-system": "^8.1.0",
     "expo-font": "^8.1.1",
     "galio-framework": "^0.6.3",
+    "graphql": "^14.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-native": "0.62.2",
