--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-tabs": "^4.1.2",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
