--- a/amplify/backend/auth/nerdhub39718c9f/nerdhub39718c9f-cloudformation-template.yml
+++ b/amplify/backend/auth/nerdhub39718c9f/nerdhub39718c9f-cloudformation-template.yml
@@ -89,9 +89,6 @@ Parameters:
   hostedUI:
     Type: String
             
-  triggers:
-    Type: String
-              
   hostedUIDomainName:
     Type: String
                       
@@ -109,13 +106,7 @@ Parameters:
                       
   userPoolGroupList:
     Type: CommaDelimitedList
-                        
-  parentStack:
-    Type: String
-                
-  permissions:
-    Type: CommaDelimitedList
-              
+                          
   dependsOn:
     Type: CommaDelimitedList
     
@@ -130,7 +121,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'nerdhu3da47086_sns-role', !Join ['',[ 'sns', '3da47086', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'nerdhu39718c9f_sns-role', !Join ['',[ 'sns', '39718c9f', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -142,10 +133,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: nerdhu3da47086_role_external_id
+                sts:ExternalId: nerdhu39718c9f_role_external_id
       Policies: 
         - 
-          PolicyName: nerdhu3da47086-sns-policy
+          PolicyName: nerdhu39718c9f-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -191,27 +182,15 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: nerdhu3da47086_role_external_id
+        ExternalId: nerdhu39718c9f_role_external_id
     
-  
-    
-    
-  
-    
-    
-  
-  
-   
-    
-  # Updating lambda role with permissions to Cognito
-  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: nerdhu3da47086_app_clientWeb
+      ClientName: nerdhu39718c9f_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -221,7 +200,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: nerdhu3da47086_app_client
+      ClientName: nerdhu39718c9f_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -232,7 +211,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '3da47086', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '39718c9f', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -286,7 +265,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: nerdhu3da47086_userpoolclient_lambda_iam_policy
+      PolicyName: nerdhu39718c9f_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -303,7 +282,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: nerdhu3da47086_userpoolclient_lambda_log_policy
+      PolicyName: nerdhu39718c9f_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -690,7 +669,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'nerdhub3da47086_identitypool_3da47086', !Join ['',['nerdhub3da47086_identitypool_3da47086', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'nerdhub39718c9f_identitypool_39718c9f', !Join ['',['nerdhub39718c9f_identitypool_39718c9f', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
