cleaned code, explore page, new amplify, fixed auth

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,11 +1,10 @@
 {
 	"auth": {
-		"nerdhub39718c9f": {
+		"nerdhub4f2efcd5": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation",
 			"dependsOn": [],
 			"customAuth": false
 		}
-	},
-	"function": {}
+	}
 }
