--- a/amplify/backend/auth/nerdhub4f2efcd5/nerdhub4f2efcd5-cloudformation-template.yml
+++ b/amplify/backend/auth/nerdhub4f2efcd5/nerdhub4f2efcd5-cloudformation-template.yml
@@ -121,7 +121,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'nerdhu39718c9f_sns-role', !Join ['',[ 'sns', '39718c9f', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'nerdhu4f2efcd5_sns-role', !Join ['',[ 'sns', '4f2efcd5', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -133,10 +133,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: nerdhu39718c9f_role_external_id
+                sts:ExternalId: nerdhu4f2efcd5_role_external_id
       Policies: 
         - 
-          PolicyName: nerdhu39718c9f-sns-policy
+          PolicyName: nerdhu4f2efcd5-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -182,7 +182,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: nerdhu39718c9f_role_external_id
+        ExternalId: nerdhu4f2efcd5_role_external_id
     
   
   UserPoolClientWeb:
@@ -190,7 +190,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: nerdhu39718c9f_app_clientWeb
+      ClientName: nerdhu4f2efcd5_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -200,7 +200,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: nerdhu39718c9f_app_client
+      ClientName: nerdhu4f2efcd5_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -211,7 +211,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '39718c9f', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '4f2efcd5', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -265,7 +265,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: nerdhu39718c9f_userpoolclient_lambda_iam_policy
+      PolicyName: nerdhu4f2efcd5_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -282,7 +282,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: nerdhu39718c9f_userpoolclient_lambda_log_policy
+      PolicyName: nerdhu4f2efcd5_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -669,7 +669,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'nerdhub39718c9f_identitypool_39718c9f', !Join ['',['nerdhub39718c9f_identitypool_39718c9f', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'nerdhub4f2efcd5_identitypool_4f2efcd5', !Join ['',['nerdhub4f2efcd5_identitypool_4f2efcd5', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
