--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "graphql": "^14.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
-    "react-native": "0.62.2",
+    "react-native": "^0.62.2",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-material-menu": "^1.1.3",
     "react-native-material-tabs": "^4.1.2",
