--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^3.1.5",
     "@aws-amplify/pubsub": "^2.1.9",
     "@expo/vector-icons": "^10.0.6",
@@ -33,7 +34,6 @@
     "expo-file-system": "^8.1.0",
     "expo-font": "^8.1.1",
     "galio-framework": "^0.6.3",
-    "graphql": "^14.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-native": "^0.62.2",
