--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^3.1.5",
-    "@aws-amplify/pubsub": "^2.1.9",
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.9",
@@ -36,6 +35,7 @@
     "galio-framework": "^0.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-apollo": "^3.1.5",
     "react-native": "^0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.7.0",
@@ -53,6 +53,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@aws-amplify/pubsub": "^1.3.3",
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.1.0",
@@ -60,7 +61,10 @@
     "eslint": "^6.8.0",
     "jest": "^25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.11.0"
+    "react-dom": "^16.14.0",
+    "react-native-fs": "^2.16.6",
+    "react-test-renderer": "16.11.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "jest": {
     "preset": "react-native"
