--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^3.1.5",
     "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-community/netinfo": "^5.9.2",
