--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-more-text": "^2.1.0",
+    "rn-sliding-up-panel": "^2.4.5",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
